--- a/invite.html
+++ b/invite.html
@@ -20,7 +20,7 @@
     <form action="https://formspree.io/f/xjgevoza" method="POST">
         <input type="hidden" name="name" id="hiddenName">
         <input type="hidden" name="_redirect"
-               value="https://cajnik33.github.io/imprezka/thanks.html">
+               value="https://cajnik33.github.io/imprezka/masz-przyjsc.html">
 
         <button type="submit" name="attendance" value="BĘDĘ">✅ Będę!</button>
         <button type="submit" name="attendance" value="NIE BĘDĘ">❌ Nie będę</button>
