final vers I hope

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div class="card center">
     <h1>🎉 Zaproszenie 🎉</h1>
-    <p>Wpisz swoje imię</p>
+    <p>Podaj swoje imię</p>
 
     <input id="nameInput" type="text" placeholder="Twoje imię">
     <button onclick="goInvite()">Dalej ➜</button>
