--- a/masz-przyjsc.html
+++ b/masz-przyjsc.html
@@ -8,8 +8,8 @@
 <body>
 
 <div class="card center">
-    <h1>Dziękuję 💖</h1>
-    <p>Odpowiedź została zapisana!</p>
+    <h1>Dziękuję za odpowiedź 💖</h1>
+    <p>Odpowiedź została dostarczona!</p>
 </div>
 
 </body>
